# types

./: .gitignore  AGENTS.md  API_DIAGNOSIS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DIAGNOSIS.md  Makefile  README.md  Taskfile.yml  count_lines.py  go.mod  go.sum
.Jules/: proposal.md
.jules/: bolt.md  bugtracker.md  proposal.md  sentinel.md
cmake/: flatbuffers.cmake
go/protocol/: AnyValue.go  CommandInvokeRequest.go  CommandInvokeResponse.go  Date.go  RtdOnceGridResult.go  ScalarValue.go  builder_pool.go  deepcopy.go  deepcopy_security_test.go  deepcopy_test.go  doc.go  extensions.go  extensions_test.go  flatc_version.go  flatc_version_test.go  rtd_once_grid_test.go  rtd_test.go  union_completeness_test.go  validation_test.go
include/types/: ObjectPool.h  PascalString.h  ScopeGuard.h  ScopedXLOPER12.h  converters.h  mem.h  pascalstr.h  protocol_generated.h  utility.h  win_compat.h  xlcall.h
src/: PascalString.cpp  converters.cpp  mem.cpp  utility.cpp  win_compat.cpp  xlcall.cpp
tests/: CMakeLists.txt  repro_bug.cpp  test_converters.cpp  test_fixes.cpp  test_logging.cpp  test_null_safety.cpp  test_pascalstr.cpp  test_roundtrip.cpp  test_scoped_xloper.cpp  test_security_fixes.cpp  test_security_regressions.cpp  test_utility.cpp  test_utility_safety.cpp
